refactor: split fix scrollbar to it's own class

--- a/packages/docsearch-css/src/modal.css
+++ b/packages/docsearch-css/src/modal.css
@@ -7,6 +7,9 @@
    */
   overflow: hidden !important;
 
+}
+
+.DocSearch--active.DocSearch-fix-scrollbar {
   overflow-y: scroll !important;
   position: fixed;
   left: 0;
